<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="horologia_my_tasks_widget_name">My Tasks</string>
  <string name="horologia_my_tasks_widget_description">See household tasks at a glance.</string>
</resources>
