appId: dev.horologia.mobile
---
- launchApp
- runFlow:
    when:
      visible: "Connect"
    commands:
      - tapOn: "Connect"
      - extendedWaitUntil:
          visible: "Continue to sign in"
          timeout: 10000
- runFlow:
    when:
      visible: "Continue to sign in"
    commands:
      - tapOn: "Continue to sign in"
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"
- runFlow:
    when:
      visible: "Try again"
    commands:
      - tapOn: "Try again"
- extendedWaitUntil:
    visible: "My Tasks"
    timeout: 30000
- assertVisible: "Tasks tab"
